--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
