--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
   s3:
     image: minio/minio:latest
     environment:
-      MINIO_ROOT_USER: 13vlxx
-      MINIO_ROOT_PASSWORD: miniopassword1234**
+      MINIO_ROOT_USER: pwadmin
+      MINIO_ROOT_PASSWORD: pwadmin0
     ports:
       - 9000:9000
       - 8900:8900
