--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.10",
+    "exifr": "^7.1.3",
     "minio": "^8.0.1",
     "nestjs-form-data": "^1.9.91",
     "nodemailer": "^6.9.13",
