--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.5.1",
